--- a/site/resources/styles/core/forms/form-layout-ltr.less
+++ b/site/resources/styles/core/forms/form-layout-ltr.less
@@ -112,3 +112,14 @@
     }
   }
 }
+
+.style-controls .basic-form .ltr
+{
+  .form-row
+  {
+    button:first-child
+    {
+      margin-left: -@standard_border_radius - @hairline_border_width;
+    }
+  }
+}
