--- a/site/resources/styles/core/common-forms.less
+++ b/site/resources/styles/core/common-forms.less
@@ -1,11 +1,11 @@
 @import "core-values";
+@import "core-mixins";
+
+input[type=button]:extend(button all){}
+input[type=submit]:extend(button all){}
 
 .style-controls
 {
-  button:extend(.button all) {}
-  input[type=submit]:extend(.button all) {}
-  input[type=button]:extend(.button all) {}
-
   button,
   input[type=submit],
   input[type=button]
@@ -19,6 +19,7 @@
   textarea
   {
     background-color: @edit_control_background_color;
+    .repeated-background(@edit_control_background_url);
     color: @edit_control_text_color;
     border: 1px solid @control_border_color;
     border-radius:  @standard_border_radius;
@@ -32,6 +33,33 @@
   {
     color: @disabled_control_text_color;
     background-color: @disabled_control_background_color;
+    .repeated-background(@disabled_control_background_url);
     border-color: @disabled_control_border_color;
   }
+}
+
+.basic-form
+{
+  fieldset
+  {
+    border-top: @hairline_border_width dotted @control_border_color;
+
+    legend
+    {
+      padding: @standard_border_radius / 2 @standard_border_radius;
+      margin-left: -@standard_border_radius;
+    }
+  }
+
+//  .help
+//  {
+//    padding: @small_spacing;
+//    padding-left: 25px;
+//    background-image: url(../../../icons/webcore_png/indicators/info_16px.png);
+//    background-repeat: no-repeat;
+//    background-position: 5px 8px;
+//    border: 1px solid #AAF;
+//    background-color: #DDEEFF;
+//    color: #666666;
+//  }
 }
